--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.17.2
   firebase_auth: ^4.19.4
-  firebase_core: ^2.30.1
+  firebase_core: ^2.31.0
   firebase_storage: ^11.2.4
   fluttertoast: ^8.1.1
+  persistent_bottom_nav_bar: ^5.0.2
 
 dev_dependencies:
   flutter_test:
