--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   cloud_firestore: ^4.17.2
   firebase_auth: ^4.19.4
   firebase_core: ^2.31.0
-  firebase_storage: ^11.2.4
+  firebase_storage: ^11.7.5
   fluttertoast: ^8.1.1
   persistent_bottom_nav_bar: ^5.0.2
-
+  image_picker: ^0.8.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -65,8 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets\image\image.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
