--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fluttertoast: ^8.1.1
   persistent_bottom_nav_bar: ^5.0.2
   image_picker: ^0.8.6
+  firebase_messaging: ^14.9.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
